# codex-transcript-viewer

./: .gitignore  README.md  TODOS.md  pyproject.toml
.agents/plugins/: marketplace.json
.github/workflows/: test.yml
plugins/codex-transcript/.codex-plugin/: plugin.json
plugins/codex-transcript/skills/codex-transcript/: SKILL.md
plugins/codex-transcript/skills/codex-transcript/agents/: openai.yaml
scripts/: install-local.sh
src/codex_transcript_viewer/: cli.py  discovery.py  html_builder.py  parser.py  style.css  transport.py  viewer.js
tests/: test_cli.py  test_html_disclosures.py  test_normalized_parser.py  test_remote.py
