[project]
name = "codex-transcript-viewer"
version = "0.3.0"
description = "Inspect, query, export, and render Codex CLI session transcripts"
requires-python = ">=3.11"
license = "MIT"

[project.scripts]
codex-transcript = "codex_transcript_viewer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codex_transcript_viewer"]
